--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "serverless-http": "^4.0.0"
