--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,48 @@
 {
   "version": 2,
+  "name": "lector-qr",
   "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "styles.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/buscar-qr",
+      "dest": "server.js",
+      "methods": ["POST"]
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "env": {
+    "GOOGLE_PROJECT_ID": "@google_project_id",
+    "GOOGLE_PRIVATE_KEY_ID": "@google_private_key_id",
+    "GOOGLE_PRIVATE_KEY": "@google_private_key",
+    "GOOGLE_CLIENT_EMAIL": "@google_client_email",
+    "GOOGLE_CLIENT_ID": "@google_client_id",
+    "GOOGLE_CLIENT_X509_CERT_URL": "@google_client_x509_cert_url",
+    "SPREADSHEET_ID": "@spreadsheet_id",
+    "SHEET_NAME": "@sheet_name"
+  }
 }
+
