--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/(?!.*\\.(css|js|json|png|jpg|jpeg|gif|ico|svg)$).*",
       "dest": "server.js"
     }
   ]
